# invoice-extractor-c

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
invoice_extractor/: __init__.py  __main__.py  cli.py  extractor.py  fields.py  models.py  output.py  reconcile.py
invoice_extractor/parsing/: __init__.py  currency.py  dates.py  numbers.py
scripts/: generate_samples.py  make_preview.py
tests/: test_currency.py  test_dates.py  test_numbers.py  test_reconcile.py
